--- a/spring/gs-rest-service/README
+++ b/spring/gs-rest-service/README
@@ -1,15 +1,15 @@
 
 From
-https://spring.io/guides/gs/actuator-service/
+https://spring.io/guides/gs/rest-service/
 
 Build
 mvn clean package
 
 Run
-java -jar target/actuator-service-0.0.1-SNAPSHOT.jar
+java -jar rest-service-0.0.1-SNAPSHOT.jar
 
 Test
-curl localhost:8080/hello-world
+curl localhost:8080/greeting
 
 Config
 vim src/main/resources/application.properties
